# biz_to_bricks_core_v1

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20241222_0001_001_initial_schema.py  20241230_0002_create_sessions_table.py  20241231_0003_add_bulk_processing_tables.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_domain_column.py  003_clean_slate.py  004_add_storage_tracking.py
src/biz2bricks_core/: __init__.py
src/biz2bricks_core/db/: __init__.py  config.py  connection.py
src/biz2bricks_core/models/: __init__.py  ai.py  base.py  bulk.py  core.py  documents.py  rag.py  sessions.py  usage.py
src/biz2bricks_core/services/: __init__.py  usage_service.py
